feat: Add preview for token groups